fixed text clipping on low resolutions

--- a/quiz/subteam-sorting.css
+++ b/quiz/subteam-sorting.css
@@ -80,3 +80,17 @@
 	margin-bottom: 40px;
 	margin-top: 40px;
 }
+
+@media (width <= 700px) {
+	.btn {
+		font-size: 10px;
+	}
+}
+
+@media (width <= 550px) {
+	.btn {
+		margin: 0 5px 0 5px;
+		white-space: pre-wrap;
+		height: 40px;
+	}
+}
